moved email form

--- a/index.html
+++ b/index.html
@@ -209,53 +209,7 @@
                     </form>
                 </div>
 
-                <!-- Email Capture Form -->
-                <div id="email-capture"
-                    class="absolute top-[65%] left-1/2 -translate-x-1/2 w-full max-w-3xl px-6 z-20 opacity-0">
-                    <div class="bg-gray-800/90 backdrop-blur-sm rounded-2xl shadow-2xl border border-gray-700 p-8">
-                        <div id="email-form-content">
-                            <h3 class="text-2xl font-bold text-white text-center mb-2">Join the Waitlist</h3>
-                            <p class="text-gray-300 text-center mb-6">Be the first to experience AI-powered Torah
-                                learning</p>
-                            <form id="ml-form" class="ml-block-form"
-                                action="https://assets.mailerlite.com/jsonp/905221/forms/118265804464588098/subscribe"
-                                method="post" target="_blank">
-                                <div class="ml-form-formContent">
-                                    <div class="ml-form-fieldRow ml-last-item">
-                                        <div
-                                            class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
-                                            <input aria-label="email" aria-required="true" type="email"
-                                                class="w-full px-4 py-3 rounded-lg border border-gray-600 bg-gray-900/50 text-white placeholder-gray-400 focus:border-blue-500 focus:ring-2 focus:ring-blue-500/50 outline-none transition-all mb-4"
-                                                name="fields[email]" placeholder="seller@website.com"
-                                                autocomplete="email" required />
-                                        </div>
-                                    </div>
-                                </div>
-                                <input type="hidden" name="ml-submit" value="1" />
-                                <input type="hidden" name="anticsrf" value="true" />
-                                <div class="ml-form-embedSubmit flex flex-col sm:flex-row gap-3 justify-center">
-                                    <button type="submit"
-                                        class="bg-gradient-to-r from-green-500 to-blue-500 hover:from-green-600 hover:to-blue-600 text-white font-semibold px-8 py-3 rounded-full text-lg transition-all">
-                                        Join the waitlist
-                                    </button>
-                                    <a href="/contact.html"
-                                        class="inline-flex items-center justify-center bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-3 rounded-full text-lg transition-all">
-                                        <i class="fa-solid fa-headset mr-2"></i> Schedule a Call
-                                    </a>
-                                </div>
-                            </form>
-                        </div>
-                        <div id="email-success" class="hidden text-center">
-                            <h4 class="text-2xl font-bold text-white mb-2">Get Ready!</h4>
-                            <p class="text-gray-300 text-lg">
-                                You're in line for ecommerce awesomeness.
-                                <a href="/contact.html"
-                                    class="text-blue-400 hover:text-blue-300 underline font-semibold">Schedule a
-                                    call</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+
             </section>
 
             <div class="relative z-30">
@@ -371,6 +325,43 @@
                                 </div>
                             </div>
                         </dl>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Email Capture Section -->
+            <div class="bg-gray-900 py-16 sm:py-20">
+                <div class="mx-auto max-w-3xl px-6 lg:px-8">
+                    <div class="bg-gray-800/90 backdrop-blur-sm rounded-2xl shadow-2xl border border-gray-700 p-8">
+                        <div id="email-form-content">
+                            <h3 class="text-2xl font-bold text-white text-center mb-6">Join the Waitlist</h3>
+                            <!-- <p class="text-gray-300 text-center mb-6">Be the first to experience AI-powered Torah learning</p> -->
+                            <form id="ml-form" class="ml-block-form"
+                                action="https://assets.mailerlite.com/jsonp/905221/forms/118265804464588098/subscribe"
+                                method="post" target="_blank">
+                                <div class="ml-form-formContent">
+                                    <div class="ml-form-fieldRow ml-last-item">
+                                        <div class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
+                                            <input aria-label="email" aria-required="true" type="email"
+                                                class="w-full bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-gray-500 mb-4"
+                                                name="fields[email]" placeholder="shliach@chabadofmytown.com"
+                                                autocomplete="email" required />
+                                        </div>
+                                    </div>
+                                </div>
+                                <input type="hidden" name="ml-submit" value="1" />
+                                <input type="hidden" name="anticsrf" value="true" />
+                                <div class="ml-form-embedSubmit flex justify-center">
+                                    <button type="submit"
+                                        class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium bg-gray-800 text-white hover:bg-gray-700 transition-colors">
+                                        Join the Waitlist
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                        <div id="email-success" class="hidden text-center">
+                            <h4 class="text-2xl font-bold text-white mb-2">Get Ready!</h4>
+                        </div>
                     </div>
                 </div>
             </div>
