features image size

--- a/index.html
+++ b/index.html
@@ -227,102 +227,90 @@
                     </div>
                     <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
                         <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Torah Study
+                                    Assistant
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=200&h=200&fit=crop"
-                                            alt="Torah Study" class="w-full h-full object-cover image-hover-zoom"></a>
+                                            alt="Torah Study" class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Torah Study
-                                        Assistant
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Get instant explanations and insights on Torah
-                                            passages,
-                                            Talmudic discussions, and Jewish law with our advanced AI.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Get instant explanations and insights on Torah
+                                        passages,
+                                        Talmudic discussions, and Jewish law with our advanced AI.</p>
+                                </dd>
                             </div>
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Personalized
+                                    Learning
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=200&h=200&fit=crop"
                                             alt="Personalized Learning"
-                                            class="w-full h-full object-cover image-hover-zoom"></a>
+                                            class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Personalized
-                                        Learning
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Adaptive learning paths that adjust to your level
-                                            and
-                                            interests, making Jewish education more accessible and engaging.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Adaptive learning paths that adjust to your level
+                                        and
+                                        interests, making Jewish education more accessible and engaging.</p>
+                                </dd>
                             </div>
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Multi-Language
+                                    Support
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?w=200&h=200&fit=crop"
                                             alt="Multi-Language"
-                                            class="w-full h-full object-cover image-hover-zoom"></a>
+                                            class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Multi-Language
-                                        Support
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Access content in Hebrew, English, Yiddish, and
-                                            more
-                                            with
-                                            seamless translation and cultural context.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Access content in Hebrew, English, Yiddish, and
+                                        more
+                                        with
+                                        seamless translation and cultural context.</p>
+                                </dd>
                             </div>
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Halachic Guidance
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1505664194779-8beaceb93744?w=200&h=200&fit=crop"
                                             alt="Halachic Guidance"
-                                            class="w-full h-full object-cover image-hover-zoom"></a>
+                                            class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Halachic Guidance
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Get reliable guidance on Jewish law and customs
-                                            with
-                                            sources and explanations from trusted rabbinic authorities.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Get reliable guidance on Jewish law and customs
+                                        with
+                                        sources and explanations from trusted rabbinic authorities.</p>
+                                </dd>
                             </div>
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Community Features
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?w=200&h=200&fit=crop"
-                                            alt="Community" class="w-full h-full object-cover image-hover-zoom"></a>
+                                            alt="Community" class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Community Features
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Connect with fellow learners, share insights, and
-                                            participate in study groups within our secure platform.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Connect with fellow learners, share insights, and
+                                        participate in study groups within our secure platform.</p>
+                                </dd>
                             </div>
-                            <div class="flex flex-row gap-4">
-                                <div class="flex-shrink-0 rounded-lg image-hover-container w-32 h-32"><a href="#">
+                            <div class="flex flex-col">
+                                <dt class="text-base font-semibold leading-7 text-white">Instant Answers
+                                </dt>
+                                <div class="mt-4 rounded-lg image-hover-container"><a href="#">
                                         <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=200&h=200&fit=crop"
                                             alt="Instant Answers"
-                                            class="w-full h-full object-cover image-hover-zoom"></a>
+                                            class="w-full h-full object-cover image-hover-zoom rounded-lg"></a>
                                 </div>
-                                <div class="flex-1">
-                                    <dt class="text-base font-semibold leading-7 text-white">Instant Answers
-                                    </dt>
-                                    <dd class="mt-2 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                                        <p class="flex-auto">Ask questions about Jewish texts, traditions, or
-                                            practices
-                                            and get comprehensive, well-sourced answers instantly.</p>
-                                    </dd>
-                                </div>
+                                <dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-300">
+                                    <p class="flex-auto">Ask questions about Jewish texts, traditions, or
+                                        practices
+                                        and get comprehensive, well-sourced answers instantly.</p>
+                                </dd>
                             </div>
                         </dl>
                     </div>
